<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- activities / fragments -->
    <string name="title_section1">Inbox</string>
    <string name="title_section2">Friends</string>
    <string name="title_activity_login">BurnMessenger Login</string>
    <string name="title_activity_sign_up">Sign up!</string>
    <string name="title_activity_edit_friends">Edit Friends</string>
    <string name="title_activity_recipients">Choose Recipients</string>
    <string name="title_activity_send_message">Send your message!</string>
    <string name="title_activity_view_image">Image</string>
    <string name="send_message_title">Enter your message!</string>

    <!-- menu items -->
    <string name="action_settings">Settings</string>
    <string name="menu_logout_label">Logout</string>
    <string name="menu_edit_friends_label">Edit Friends</string>
    <string name="menu_camera_label">Camera</string>
    <string name="menu_chat_label">New Message</string>
    <string name="menu_send_label">Send</string>

    <!-- errors -->
    <string name="error_signup_message">Please make sure you enter a username, password, and email address!</string>
    <string name="error_signup_title">Oops!</string>
    <string name="error_login_message">Please make sure you enter a username and password!</string>
    <string name="error_login_title">Oops!</string>
    <string name="error_title">We\'re sorry!</string>
    <string name="error_external_storage">There was a problem accessing your device\'s external storage.</string>
    <string name="error_opening_file">There was a problem with the selected file.</string>
    <string name="video_size_limit_warning">The selected video must be less than 10 MB.</string>
    <string name="video_file_size_warning">The selected video must be less than 10 MB.</string>
    <string name="error_selecting_file">There was an error with the file selected. Please select a different file.</string>
    <string name="error_file_too_large">The selected file is too large! Select a new file.</string>
    <string name="error_file_size_too_large">The selected file is too large! Select a new file.</string>
    <string name="error_selecting_file_title">We\'re sorry!</string>
    <string name="error_sending_message">There was an error sending your message. Please try again.</string>
    <string name="general_error">Sorry, there was an error!</string>

    <!-- labels -->
    <string name="login_button_label">Login</string>
    <string name="sign_up_button_label">Sign Up</string>
    <string name="email_hint">Email</string>
    <string name="empty_recipients_list_message">Choose some friends first!</string>
    <string name="empty_inbox_label">No new messages!</string>
    <string name="empty_friends_label">Add friends to begin!</string>
    <string name="success_message">Message sent!</string>
    <string name="send_message_hint">Enter Message</string>

    <!-- buttons -->
    <string name="sign_up_text">Sign Up!</string>
    <!--  -->
    <!-- descriptions -->
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="icon_description">icon before each message</string>
    <string name="app_name">BurnMessenger</string>

    <string-array name="camera_choices">
        <item>Take Picture</item>
        <item>Take Video</item>
        <item>Choose Picture</item>
        <item>Choose Video</item>
    </string-array>

    <!-- push notifications -->
    <string name="push_message">You\'ve got a new message from %s!</string>

    <string name="message_destruct_label">The message you are about to see will self-destruct in 1 minute after opening!</string>
    <string name="self_destruct_title">Self-Destruction!</string>
    <string name="button_proceed">Proceed</string>
    <string name="title_activity_view_message">ViewMessageActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="self_destruct_label">Message will self-destruct in:</string>
    <string name="countdown_timer">countdown timer</string>
    <string name="self_destructed_toast">This message self-destructed!</string>


</resources>
